--- a/src/classes/NativeEmailController.cls
+++ b/src/classes/NativeEmailController.cls
@@ -1,17 +1,12 @@
 public class NativeEmailController {
     @AuraEnabled
     public static Boolean sendEmail(String mailTo, String mailCc, String mailBcc, String subject, String body,String participantId,String templateId,String sequenceActionId){
-       	Boolean isValid=isValidEmail(mailTo);
-        if(isValid){
-        	Boolean isNativeEmailSend =CadenceService.SendNativeEmail(New list<NativeEmailMessage>());
-            if(isNativeEmailSend != null && !isNativeEmailSend){
-                sendSfdcEmail(participantId,templateId,sequenceActionId,mailCc,mailBcc);
-                return true;
-            }else{
-                return true;
-            }  
-        }
-        return false;
+        RingDNAApiCallouts ringDNAApiCallout = new RingDNAApiCallouts();
+        Map<String, Object> responseMap = ringDNAApiCallout.sendNativeEmail(mailTo, '', body, sequenceActionId,  subject);
+        if (responseMap.isEmpty()  || (!responseMap.isEmpty() && responseMap.get('success') == false) ){
+            sendSfdcEmail(participantId,templateId,sequenceActionId);
+        } 
+         return true;
     }
     
     public class NativeEmailWrapper {
