Code commited for feature/SFDC-357-QA Issue fix

--- a/src/classes/CadenceSelector.cls
+++ b/src/classes/CadenceSelector.cls
@@ -139,7 +139,6 @@ public with sharing class CadenceSelector {
             queryWithSubQuery = 'Select '+nameSpace+'Cadence_ID__r.name, ' + queryWithSubQuery ;
             queryWithSubQuery += ' WHERE '+nameSpace+'isActivated__c = true AND IsConverted != true  AND '+nameSpace+'Cadence_Id__c != null AND OwnerId=:userId';
         }
-        System.debug('queryWithSubQuery:'+queryWithSubQuery);
         return Database.query(queryWithSubQuery); 
     }
     
@@ -256,8 +255,8 @@ public with sharing class CadenceSelector {
        List<Sequence_Action__c> participantActions = new List<Sequence_Action__c>();
        
        participantActions = [Select Id, Name, CadenceAction_ID__c,Actual_Execution_Date__c, Expected_Execution_Date__c,  Lead_Id__c, Contact_Id__c, isActionPerformed__c,
-                             CadenceAction_Id__r.Day__c,CadenceAction_Id__r.Hour__c, CadenceAction_Id__r.Action_Id__r.Type__c,CadenceAction_Id__r.Index__c
-                             From Sequence_Action__c 
+                             CadenceAction_Id__r.Day__c,CadenceAction_Id__r.Hour__c, CadenceAction_Id__r.Action_Id__r.Type__c,CadenceAction_Id__r.Index__c,Opportunity_Id__c,Cadence_Type__c,CadenceAction_Id__r.Fields_To_Update_Action__c
+                             From Sequence_Action__c
                              where Id IN :objIds ];
        
        return participantActions;
