--- a/src/classes/CadenceConstants.cls
+++ b/src/classes/CadenceConstants.cls
@@ -3,6 +3,7 @@ public with sharing class CadenceConstants {
     //Namespace for managed package
     public static final String orgNamespace = [select NamespacePrefix from ApexClass where Name = 'TargetListController'].NamespacePrefix;
     public static final String NAMESPACE = orgNamespace == null ? '' : orgNamespace+'__';
+    public static final String ORANIZATION_ID = Userinfo.getOrganizationId();    
     
     // Object names
     public static final String CONTACT_OBJECT_NAME = 'Contact';
